--- a/SketchCature/contactInfo.html
+++ b/SketchCature/contactInfo.html
@@ -81,6 +81,7 @@
         <img src="Banner1.png" class="img-fluid" alt="Banner" />
       </div>
 
+      <div class="cen" style="padding-bottom: 300px"><
       <div class="mapouter">
         <div class="gmap_canvas">
           <iframe
@@ -109,6 +110,7 @@
               width: 600px;
             }
           </style>
+          </div>
         </div>
       </div>
     
